--- a/config/boards/shields/JiyuJizai/JiyuJizai_R.conf
+++ b/config/boards/shields/JiyuJizai/JiyuJizai_R.conf
@@ -6,7 +6,7 @@ CONFIG_ZMK_BLE=y
 
 CONFIG_SPI=y
 CONFIG_INPUT=y
-CNFIG_PAW3222=y
+CONFIG_PAW3222=y
 
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
