--- a/config/west.yml
+++ b/config/west.yml
@@ -11,7 +11,7 @@ manifest:
       remote: zmkfirmware
       revision: main
       import: app/west.yml
-    - name: zmk-pmw3610-driver
+    - name: zmk-paw3222-driver
       remote: shakushakupanda
       revision: main
     - name: zmk-rgbled-widget  # <-- new entry
