--- a/config/boards/shields/JiyuJizai/JiyuJizai.dtsi
+++ b/config/boards/shields/JiyuJizai/JiyuJizai.dtsi
@@ -32,8 +32,8 @@
 
     left_encoder: encoder_left {
         compatible = "alps,ec11";
-        a-gpios = <&xiao_d 5 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-        b-gpios = <&xiao_d 0 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        a-gpios = <&xiao_d 5 (GPIO_ACTIVE_HIGH)>;
+        b-gpios = <&xiao_d 0 (GPIO_ACTIVE_HIGH)>;
         steps = <24>;
         status = "disabled";
     };
